extract-doctests/tests/ui/bad_attr_ident2.stderr
error: Failed to parse attributes as Config; #[extract_doctest] checks for inline configuration declerations before reading your Cargo.toml file from disk, but the inline configuration was not valid. The exact error is attached below.

 --> tests/ui/bad_attr_ident2.rs:3:20
  |
3 | #[extract_doctests(inline_config(bad_attr = ""))]
  |                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: Expected template, not bad_attr
 --> tests/ui/bad_attr_ident2.rs:3:34
  |
3 | #[extract_doctests(inline_config(bad_attr = ""))]
  |                                  ^^^^^^^^
