extract-doctests/tests/ui/bad_attr_ident2.rs
use extract_doctests::extract_doctests;

#[extract_doctests(inline_config(bad_attr = ""))]
fn placeholder() {}

fn main() {}
